# macos-tweaks

./: Cargo.toml  README.md  config.example.json  macos-tweaks.1
scripts/: organize_projects.sh
src/: app.rs  config.rs  main.rs  tweaks.rs  ui.rs  utils.rs
