[package]
name = "macos-tweaks"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.0"
crossterm = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
rand = "0.8"
